# aievaluator-cli

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTORS.md  README.md  bump.sh
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
ci-templates/: Jenkinsfile  github-actions.yml  gitlab-ci.yml  kubernetes-job.yaml
dotnet/: README.md  TEST_PLAN.md
dotnet/src/: CliProgram.cs  Config.cs  Program.cs  Tunnel.cs  aievaluator.csproj
dotnet/tests/: ApiClientTests.cs  CliIntegrationTests.cs  ConfigTests.cs  DatasetTests.cs  ExitCodesTests.cs  FormatterTests.cs  MetricsThresholdsTests.cs  tests.csproj
go/: README.md  TEST_PLAN.md  go.mod
go/internal/: config.go
intellij/: README.md  build.gradle.kts  settings.gradle.kts
node/: README.md  TEST_PLAN.md  package-lock.json  package.json  tsconfig.json  tsconfig.vitest.json
node/src/: cli.ts  config.ts  index.ts  tunnel.ts
node/tests/: all.test.ts
python/: README.md  TEST_PLAN.md  pyproject.toml
python/src/aievaluator/: __init__.py  cli.py  config.py  tunnel.py
python/src/aievaluator/api/: client.py
python/src/aievaluator/formatters/: __init__.py  json.py  junit.py  table.py
python/tests/: test_api.py  test_cli_config.py  test_cli_eval.py  test_cli_init.py  test_cli_login.py  test_cli_quick.py  test_cli_whoami.py  test_config.py  test_dataset.py  test_exit_codes.py  test_formatters.py  test_metrics.py  test_thresholds.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs  tunnel.rs
rust/src/api/: client.rs  config.rs
rust/src/formatters/: json.rs  junit.rs  mod.rs  table.rs
rust/tests/: cli_tests.rs  config_tests.rs  formatter_tests.rs
shared/: api-surface.md  config-spec.md  output-formats.md
vs/: .gitignore
vs/AIEvaluator.VSIX/: AIEvaluator.VSIX.csproj  AIEvaluatorPackage.cs  PackageGuids.cs  README.md  source.extension.vsixmanifest
vscode/: .gitignore  .vscodeignore  DEBUG.md  README.md  TUTORIAL.md  package-lock.json  package.json  playwright.screenshots.config.ts  tsconfig.json
vscode/scripts/: guion-01-preparar.sh  guion-02-abrir.sh  guion-03-grabar.sh  guion-04-empaquetar.sh  guion-05-completo.sh
vscode/src/: extension.ts
vscode/test-results/: .last-run.json
(+65 files in other folders)
