[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aievaluator"
version = "1.1.0"
description = "AI Evaluator CLI — evaluate your LLM agents from the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Evaluator", email = "support@aievaluator.dev"},
]
keywords = ["ai", "evaluation", "llm", "agent", "testing", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[project.scripts]
aievaluator = "aievaluator.cli:main"

[project.urls]
Homepage = "https://aievaluator.dev"
Repository = "https://github.com/aievaluator-dev/aievaluator-cli"
Issues = "https://github.com/aievaluator-dev/aievaluator-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
