[package]
name = "aievaluator"
version = "1.1.0"
edition = "2021"
description = "AI Evaluator CLI — evaluate your LLM agents from the command line"
license = "MIT"
repository = "https://github.com/aievaluator-dev/aievaluator-cli"
keywords = ["ai", "evaluation", "llm", "agent", "testing", "ci-cd"]

[[bin]]
name = "aievaluator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
